@@ -1,11 +1,12 @@
-#include <unistd.h>
-#include <sys/types.h>
 
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif
 
 #include "leafnode.h"
+
+#include <unistd.h>
+#include <sys/types.h>
 
 #ifdef WITH_DMALLOC
 #include <dmalloc.h>
