@@ -1,10 +1,10 @@
+#include "ugid.h"
 #include <pwd.h>
 
 #ifdef WITH_DMALLOC
 #include <dmalloc.h>
 #endif
 
-#include "ugid.h"
 int
 gid_getbyuname(const char *name, /*@out@*/ gid_t * p_gid)
 {
