@@ -1,10 +1,11 @@
+#include "ugid.h"
+
 #include <pwd.h>
 
 #ifdef WITH_DMALLOC
 #include <dmalloc.h>
 #endif
 
-#include "ugid.h"
 int
 uid_getbyuname(const char *name, /*@out@*/ uid_t * p_uid)
 {
